[package]
name = "litecode-backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2"
log = "0.4"
pretty_env_logger = "0.5"
bytes = "1"
wait-timeout = "0.2"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.116"
serde = "1.0.199"
